--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.17.1",
+    "@mui/x-date-pickers": "^6.20.2",
+    "@react-google-maps/api": "^2.20.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google-maps": "^3.2.6",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "date-fns": "^2.30.0",
+    "html5-qrcode": "^2.3.8",
+    "nodemailer": "^7.0.3",
+    "qrcode.react": "^4.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -21,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-certs": "node scripts/generate-ssl-certs.js",
+    "start-https": "set HTTPS=true && set SSL_CRT_FILE=cert.pem && set SSL_KEY_FILE=key.pem && npm run generate-certs && react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +53,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@firebase/auth-types": "^0.13.0",
+    "@firebase/firestore-types": "^3.0.3",
+    "@types/firebase": "^2.4.32",
+    "@types/google-maps-react": "^2.0.4",
+    "@types/google.maps": "^3.58.1",
+    "@types/node": "^22.15.3",
+    "@types/react-router-dom": "^5.3.3",
+    "firebase": "^11.6.1",
+    "mkcert": "^3.2.0",
+    "selfsigned": "^2.4.1"
   }
 }
