--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "date-fns": "^2.30.0",
+    "emailjs-com": "^3.2.0",
     "html5-qrcode": "^2.3.8",
     "nodemailer": "^7.0.3",
     "qrcode.react": "^4.2.0",
