--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ REACT_APP_FIREBASE_APP_ID=
 
 # Google Maps API Key (for station locations)
 REACT_APP_GOOGLE_MAPS_API_KEY=
+
+REACT_APP_EMAILJS_SERVICE_ID=service_g60ss7r
+REACT_APP_EMAILJS_TEMPLATE_ID=template_18ykfod
+REACT_APP_EMAILJS_PUBLIC_KEY=dxgdiGjq_ydGVPnF5
