--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ REACT_APP_FIREBASE_APP_ID=
 # Google Maps API Key (for station locations)
 REACT_APP_GOOGLE_MAPS_API_KEY=
 
-#Email Js
+#Email Js   #you need to add email js keys in otp.ts -> located at -> src/services/otp.ts
 REACT_APP_EMAILJS_SERVICE_ID=
 REACT_APP_EMAILJS_TEMPLATE_ID=
 REACT_APP_EMAILJS_PUBLIC_KEY=
