--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "electric-vehicle-bunk",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@dappier/sdk": "^1.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@googlemaps/js-api-loader": "^1.16.8",
@@ -10,6 +11,7 @@
     "@mui/material": "^5.17.1",
     "@mui/x-date-pickers": "^6.20.2",
     "@react-google-maps/api": "^2.20.6",
+    "@sentry/react": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,14 +20,18 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "date-fns": "^2.30.0",
+    "elevenlabs-node": "^1.0.0",
     "emailjs-com": "^3.2.0",
     "html5-qrcode": "^2.3.8",
+    "i18next": "^23.0.0",
     "nodemailer": "^7.0.3",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "revenuecat-react": "^1.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
