--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ REACT_APP_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
 REACT_APP_EMAILJS_SERVICE_ID=your_emailjs_service_id
 REACT_APP_EMAILJS_TEMPLATE_ID=your_emailjs_template_id
 REACT_APP_EMAILJS_PUBLIC_KEY=your_emailjs_public_key
+
+# Source Map Generation
+GENERATE_SOURCEMAP=false
